--- a/task2_monefy_android_automation/monefy/pom.xml
+++ b/task2_monefy_android_automation/monefy/pom.xml
@@ -84,6 +84,11 @@
           <version>2.5.2</version>
         </plugin>
         <plugin>
+          <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.12.0</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
